# data-drills

./: .gitignore  data-drills.code-workspace  pyproject.toml
MNIST/: .env  Dockerfile  dependencies.txt  docker-compose.yml  env.yml  mlflow_backend.db  mnist.ipynb  train.py
MNIST/dockerized-nginx/: Dockerfile  mlflow.conf  nginx.conf
