[tool.poetry]
name = "data-drills"
version = "0.1.0"
description = ""
authors = ["Nikolaos Vyzas <nbyzas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^1.26.1"
scikit-learn = "^1.1.1"
data-mastor = { git = "https://github.com/nbyzas/data-mastor.git" }

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
